force-app/main/default/objects/IA_Feature__c/IA_Feature__c.object-meta.xml
<CustomObject>
    <description>Object for the features displayed in the IA2.0 Product Selection visualforce pages
Object Type: IA
Integrated: Y</description>
    <label>IA Feature</label>
    <nameField>
        <label>Red Wing ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IA Feature</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>