force-app/main/default/objects/IA_Feature__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Product Category for the IA Feature.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Product Category for the IA Feature.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Footwear</fullName>
            </value>
            <value>
                <fullName>Workwear</fullName>
            </value>
            <value>
                <fullName>Outside Lines</fullName>
            </value>
            <value>
                <fullName>Accessories Apparel and Gear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>