force-app/main/default/objects/IA_Feature__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Controls the display order of an IA Feature in Product Selection.   Display order is relative to the display order value on other records.  Applies to both parent and child IA Features.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Controls the display order of an IA Feature in Product Selection.</inlineHelpText>
    <label>Display Order</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>