force-app/main/default/objects/IA_Feature__c/fields/Display_Up_To__c.field-meta.xml
<CustomField>
    <fullName>Display_Up_To__c</fullName>
    <description>Number to identify the number of related Children records to display up to, before showing &apos;Show More&apos; link for Filters</description>
    <inlineHelpText>Number to identify the number of related Children records to display up to, before showing &apos;Show More&apos; link for Filters</inlineHelpText>
    <label>Display Up To</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>