force-app/main/default/objects/IA_Feature__c/fields/Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>Feature_Name__c</fullName>
    <description>The name displayed in the Product Selection visualforce page. (i.e. Steel Toe).
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The name displayed in the Product Selection visualforce page. (i.e. Steel Toe).</inlineHelpText>
    <label>Feature Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>