force-app/main/default/objects/IA_Feature__c/fields/Filter_Display__c.field-meta.xml
<CustomField>
    <fullName>Filter_Display__c</fullName>
    <description>If filter display is set to expanded it will be open on page load of Product Selection VF
If filter display is set to collapsed it will be closed on page load
NOTE:  Only applies to parent / header IA features.  Where &quot;selectable&quot; equals False.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If filter display is set to expanded it will be open on page load of Product Selection VF
If filter display is set to collapsed it will be closed on page load
NOTE:  Only applies to parent / header IA features.  Where &quot;selectable&quot; equals False.</inlineHelpText>
    <label>Filter Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expanded</fullName>
            </value>
            <value>
                <fullName>Collapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>