force-app/main/default/objects/IA_Feature__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <description>The filter logic for an IA Feature.  (AND, OR) Logic for each filter and how they related to one another when selecting multiple filters using the Product Selection Visualforce Page.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>The filter logic for an IA Feature.  (AND, OR) Logic for each filter and how they related to one another when selecting multiple filters using the Product Selection Visualforce Page.</inlineHelpText>
    <label>Filter Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>