force-app/main/default/objects/IA_Feature__c/fields/Parent_IA_Feature__c.field-meta.xml
<CustomField>
    <fullName>Parent_IA_Feature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to associate an IA Feature with a Parent IA Feature.  Lookup within the same IA Feature object.
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>Used to associate an IA Feature with a Parent IA Feature.  Lookup within the same IA Feature object.</inlineHelpText>
    <label>Red Wing Parent ID</label>
    <referenceTo>IA_Feature__c</referenceTo>
    <relationshipLabel>IA Feature</relationshipLabel>
    <relationshipName>IA_Feature</relationshipName>
    <type>Lookup</type>
</CustomField>