force-app/main/default/objects/IA_Feature__c/fields/RWS_Id__c.field-meta.xml
<CustomField>
    <fullName>RWS_Id__c</fullName>
    <description>External Id for MuleSoft.
Field Type: IA
Integrated: Y</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id for MuleSoft.</inlineHelpText>
    <label>RWS Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>