force-app/main/default/objects/IA_Feature__c/fields/Selectable__c.field-meta.xml
<CustomField>
    <fullName>Selectable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked (TRUE) this feature can be selected in the product selection visualforce page (it has a checkbox).
If unchecked (FALSE) the feature cannot be selected (i.e. a header / parent)
Field Type: IA
Integrated: Y</description>
    <inlineHelpText>If checked (TRUE) this feature can be selected in the product selection visualforce page.
If unchecked (FALSE) the feature cannot be selected (i.e. a header / parent)</inlineHelpText>
    <label>Selectable</label>
    <type>Checkbox</type>
</CustomField>