force-app/main/default/objects/IA_Feature__c/fields/Tandem__c.field-meta.xml
<CustomField>
    <fullName>Tandem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Tandem, an additional Filter that is not flagged as Tandem must be selected. This is used for filters that will return large number of Products.</description>
    <inlineHelpText>If Tandem, an additional Filter that is not flagged as Tandem must be selected. This is used for filters that will return large number of Products.</inlineHelpText>
    <label>Tandem</label>
    <type>Checkbox</type>
</CustomField>