force-app/main/default/objects/IA_Feature__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Parent_IA_Feature__c</columns>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>Selectable__c</columns>
    <columns>Category__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>Filter_Display__c</columns>
    <columns>RWS_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>