force-app/main/default/objects/IA_Feature__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Feature_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>