force-app/main/default/objects/IA_Feature__c/listViews/Footwear.listView-meta.xml
<ListView>
    <fullName>Footwear</fullName>
    <columns>Parent_IA_Feature__c</columns>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>Selectable__c</columns>
    <columns>Category__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>Filter_Display__c</columns>
    <columns>RWS_Id__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RWS_Last_Updated_Date__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Footwear</value>
    </filters>
    <label>Footwear</label>
</ListView>