force-app/main/default/objects/IA_Feature__c/listViews/Parent_Features.listView-meta.xml
<ListView>
    <fullName>Parent_Features</fullName>
    <columns>NAME</columns>
    <columns>Feature_Name__c</columns>
    <columns>Filter_Display__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>Selectable__c</columns>
    <columns>Display_Order__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_IA_Feature__c</field>
        <operation>equals</operation>
    </filters>
    <label>Parent Features</label>
</ListView>