force-app/main/default/objects/IA_Feature__c/listViews/Workwear.listView-meta.xml
<ListView>
    <fullName>Workwear</fullName>
    <columns>Parent_IA_Feature__c</columns>
    <columns>NAME</columns>
    <columns>Display_Order__c</columns>
    <columns>Feature_Name__c</columns>
    <columns>Selectable__c</columns>
    <columns>Category__c</columns>
    <columns>Filter_Logic__c</columns>
    <columns>Filter_Display__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Workwear</value>
    </filters>
    <label>Workwear</label>
</ListView>